test/types/range/bradc/promoteRange2.good
promoteRange2.chpl:1: error: Ranges defined using bounds of type 'range(int(64),both,false)..int(64)' are not currently supported
