test/types/range/bradc/promoteRange2.chpl
var r = 1..3..6;

writeln("r is: ", r);
